plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.6'
    id 'io.spring.dependency-management' version '1.1.7'
    // 코드 포멧팅 플러그인
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.study'
version = '0.0.1-SNAPSHOT'
description = 'minilog-jpa'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL
    implementation 'mysql:mysql-connector-java:8.0.32'

    // JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // spring security
    testImplementation 'org.springframework.security:spring-security-test'

    // JUnit 5
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Testcontainers
    testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
    testImplementation 'org.testcontainers:testcontainers:1.20.1'
    testImplementation 'org.testcontainers:mysql:1.20.1'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JWT 구현체
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // GraphQL
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'com.graphql-java-kickstart:graphql-java-tools:11.1.0'
    implementation 'com.graphql-java-kickstart:graphiql-spring-boot-starter:11.1.0'
    implementation 'com.graphql-java:graphql-java:22.0'
    implementation 'com.graphql-java:graphql-java-extended-scalars:22.0'

    testImplementation 'org.springframework.graphql:spring-graphql-test'
}

tasks.named('test') {
    useJUnitPlatform()

    testLogging {
        events "passed", "skipped", "failed"
        outputs.upToDateWhen { false }
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }
}

// Spotless 설정(코드 포멧터)
spotless {
    java {
        googleJavaFormat('1.22.0').reflowLongStrings()
    }
}

// build 시 spotlessApply 자동 실행
build.dependsOn 'spotlessApply'
